@@ -111,31 +111,31 @@ _CONVERSION(`Angle&',`ClutterAngle*',`&($3)')
 _EQUAL(ClutterFog,Fog)
 _CONVERSION(`Fog&',`ClutterFog*',`&($3)')
 
-_EQUAL(ClutterEvent*,Event*)
 _EQUAL(ClutterButtonEvent*,ButtonEvent*)
-_EQUAL(ClutterMotionEvent*,MotionEvent*)
-_EQUAL(ClutterKeyEvent*,KeyEvent*)
-_EQUAL(ClutterScrollEvent*,ScrollEvent*)
 _EQUAL(ClutterCrossingEvent*,CrossingEvent*)
+_EQUAL(ClutterEvent*,Event*)
+_EQUAL(ClutterKeyEvent*,KeyEvent*)
+_EQUAL(ClutterMotionEvent*,MotionEvent*)
+_EQUAL(ClutterScrollEvent*,ScrollEvent*)
 
 _CONV_ENUM(Clutter,ActorFlags)
 _CONV_ENUM(Clutter,AllocationFlags)
 _CONV_ENUM(Clutter,AnimationMode)
-_CONV_ENUM(Clutter,Interpolation)
 _CONV_ENUM(Clutter,BinAlignment)
 _CONV_ENUM(Clutter,BoxAlignment)
 _CONV_ENUM(Clutter,FlowOrientation)
+_CONV_ENUM(Clutter,Gravity)
+_CONV_ENUM(Clutter,Interpolation)
 _CONV_ENUM(Clutter,LayoutFlags)
 _CONV_ENUM(Clutter,PackType)
 _CONV_ENUM(Clutter,PickMode)
-_CONV_ENUM(Clutter,TextureFlags)
 _CONV_ENUM(Clutter,RequestMode)
-_CONV_ENUM(Clutter,RotateDirection)
 _CONV_ENUM(Clutter,RotateAxis)
-_CONV_ENUM(Clutter,Gravity)
-_CONV_ENUM(Clutter,TimelineDirection)
-_CONV_ENUM(Clutter,TextureQuality)
+_CONV_ENUM(Clutter,RotateDirection)
 _CONV_ENUM(Clutter,TextDirection)
+_CONV_ENUM(Clutter,TextureFlags)
+_CONV_ENUM(Clutter,TextureQuality)
+_CONV_ENUM(Clutter,TimelineDirection)
 _CONV_ENUM(Pango,EllipsizeMode)
 _CONV_ENUM(Pango,WrapMode)
 
